--- a/Anchor.toml
+++ b/Anchor.toml
@@ -2,7 +2,7 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-solana_twitter = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+solana_twitter = "2LHuPC1t2DHmwvW7hbmPyk8KDPS7AMKtNKdrFeiyjPyz"
 
 [registry]
 url = "https://api.apr.dev"
@@ -13,3 +13,4 @@ wallet = "/root/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+my-custom-script = "echo 'hello world!'"
